// ============================================================================
// /sales/analytics-service (版本 2.0)
// 描述: 提供销售数据的多维度分析功能。
//       数据源于销售订单、交货单和发票，通常在数据仓库或分析平台中进行聚合。
// ============================================================================

syntax = "proto3";

package enterprise.sales.analytics;

option java_package = "com.enterprise.sales.analytics.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/sales/analytics/v2;analytics";

import "common/common.proto";

// ============================================================================
// 服务定义: SalesAnalyticsService
// ============================================================================

service SalesAnalyticsService {
  // 按客户获取销售额
  rpc GetSalesByCustomer(SalesAnalysisRequest) returns (SalesAnalysisResponse);

  // 按产品获取销售额
  rpc GetSalesByProduct(SalesAnalysisRequest) returns (SalesAnalysisResponse);

  // 获取销售额趋势
  rpc GetSalesTrend(SalesTrendRequest) returns (SalesTrendResponse);
}

// ============================================================================
// 数据结构: SalesAnalysis (销售分析)
// ============================================================================

// 销售分析维度
message SalesDimension {
  // 维度ID (例如, 客户ID或产品ID)
  string id = 1;
  // 维度名称
  string name = 2;
  // 销售收入
  enterprise.common.MonetaryValue revenue = 3;
  // 销售数量
  string quantity_sold = 4;
  // 单位
  string unit = 5;
}

// 时间序列数据点
message TimeSeriesDataPoint {
  // 时间点 (例如, "2026-01")
  string period = 1;
  // 该时间点的销售收入
  enterprise.common.MonetaryValue revenue = 2;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 销售分析请求
message SalesAnalysisRequest {
  // 时间范围
  enterprise.common.DateRange time_range = 1;
  // 销售组织过滤器
  repeated string sales_orgs = 2;
  // 分销渠道过滤器
  repeated string distribution_channels = 3;
  // 返回结果数量限制
  int32 top_n = 4;
}

// 销售分析响应
message SalesAnalysisResponse {
  // 分析结果列表
  repeated SalesDimension results = 1;
}

// 销售趋势请求
message SalesTrendRequest {
  // 时间范围
  enterprise.common.DateRange time_range = 1;
  // 时间粒度 (MONTHLY, QUARTERLY, YEARLY)
  string granularity = 2;
  // 过滤器
  SalesAnalysisRequest filters = 3;
}

// 销售趋势响应
message SalesTrendResponse {
  // 时间序列数据点列表
  repeated TimeSeriesDataPoint trend = 1;
}
